--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,47 +2,26 @@
 layout: default
 ---
 
-<div class="post">
-  <div class="top">
-  <time datetime="{{ page.date | xmlschema }}">{{ page.date | date: "%d %b" }}</time>
-  <h2>{{ page.title }}</h2>
-  </div>
-  <div class="content">
+<p class="meta">
+  {{ page.date | date: "%B %d, %Y" }} 
+  <a href="/">
+    <i class="home fa fa-home"></i>
+  </a>
+</p>
+
+<h1 class="title">{{ page.title }}</h1>
+
+<div id="post">
   {{ content }}
-<div id="paginator">
-  {% if page.previous %}
-    <a id="left" href="{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Older</a>
-  {% endif %}
-  <form action="http://www.google.com/cse" method="get">
-    <fieldset>
-      <input type="hidden" name="cx" value="014712474749397443257:u5axdnovsmk" />
-      <input type="hidden" name="ie" value="UTF-8" />
-      <input type="search" name="q" size="31" />
-      <input type="submit" name="sa" value="Search" />
-    </fieldset>
-  </form>
-  {% if page.next %}
-    <a id="right" href="{{ page.next.url }}" title="{{ page.next.title }}">Newer &rarr;</a>
-  {% endif %}
 </div>
-<div id="disqus_thread"></div>
-<script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'benage'; // required: replace example with your forum shortname
 
-// The following are highly recommended additional parameters. Remove the slashes in front to use.
-// var disqus_identifier = 'unique_dynamic_id_1234';
-// var disqus_url = 'http://example.com/permalink-to-page.html';
-
-/* * * DON'T EDIT BELOW THIS LINE * * */
-(function() {
- var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
- dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
- (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
- })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-  </div>
-  <div class="bottom"></div>
+<div id="related">
+  <h3>Related Posts</h3>
+  <ul class="posts">
+    {% for post in site.related_posts limit:3 %}
+    <li>
+      <span>{{ post.date | date_to_string }} &raquo;</span> <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+    {% endfor %}
+  </ul>
 </div>
-{% include footer.html %}
